; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/test/extr_test_write_format_7zip_large.c_test_large.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libarchive/libarchive/test/extr_test_write_format_7zip_large.c_test_large.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive_entry = type { i32 }
%struct.archive = type { i32 }

@LARGE_SIZE = common dso_local global i32 0, align 4
@ARCHIVE_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [5 x i8] c"7zip\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"compression\00", align 1
@.str.2 = private unnamed_addr constant [48 x i8] c"%s writing not fully supported on this platform\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"file\00", align 1
@AE_IFREG = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [5 x i8] c"ppmd\00", align 1
@.str.5 = private unnamed_addr constant [9 x i8] c"7z\BC\AF'\1C\00\03\00", align 1
@ARCHIVE_EOF = common dso_local global i64 0, align 8
@ARCHIVE_FILTER_NONE = common dso_local global i64 0, align 8
@ARCHIVE_FORMAT_7ZIP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @test_large to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_large(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.archive_entry*, align 8
  %4 = alloca %struct.archive*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %12 = load i32, i32* @LARGE_SIZE, align 4
  %13 = add nsw i32 %12, 262144
  %14 = sext i32 %13 to i64
  store i64 %14, i64* %6, align 8
  %15 = load i32, i32* @LARGE_SIZE, align 4
  %16 = sext i32 %15 to i64
  store i64 %16, i64* %7, align 8
  %17 = load i64, i64* %6, align 8
  %18 = call i8* @malloc(i64 %17)
  store i8* %18, i8** %8, align 8
  %19 = icmp ne i8* %18, null
  %20 = zext i1 %19 to i32
  %21 = call i32 @assert(i32 %20)
  %22 = load i64, i64* %7, align 8
  %23 = call i8* @malloc(i64 %22)
  store i8* %23, i8** %9, align 8
  %24 = icmp ne i8* %23, null
  %25 = zext i1 %24 to i32
  %26 = call i32 @assert(i32 %25)
  %27 = load i64, i64* %7, align 8
  %28 = call i8* @malloc(i64 %27)
  store i8* %28, i8** %10, align 8
  %29 = icmp ne i8* %28, null
  %30 = zext i1 %29 to i32
  %31 = call i32 @assert(i32 %30)
  %32 = call %struct.archive* (...) @archive_write_new()
  store %struct.archive* %32, %struct.archive** %4, align 8
  %33 = icmp ne %struct.archive* %32, null
  %34 = zext i1 %33 to i32
  %35 = call i32 @assert(i32 %34)
  %36 = load %struct.archive*, %struct.archive** %4, align 8
  %37 = icmp eq %struct.archive* %36, null
  br i1 %37, label %47, label %38

38:                                               ; preds = %1
  %39 = load i8*, i8** %8, align 8
  %40 = icmp eq i8* %39, null
  br i1 %40, label %47, label %41

41:                                               ; preds = %38
  %42 = load i8*, i8** %9, align 8
  %43 = icmp eq i8* %42, null
  br i1 %43, label %47, label %44

44:                                               ; preds = %41
  %45 = load i8*, i8** %10, align 8
  %46 = icmp eq i8* %45, null
  br i1 %46, label %47, label %56

47:                                               ; preds = %44, %41, %38, %1
  %48 = load %struct.archive*, %struct.archive** %4, align 8
  %49 = call i32 @archive_write_free(%struct.archive* %48)
  %50 = load i8*, i8** %8, align 8
  %51 = call i32 @free(i8* %50)
  %52 = load i8*, i8** %9, align 8
  %53 = call i32 @free(i8* %52)
  %54 = load i8*, i8** %10, align 8
  %55 = call i32 @free(i8* %54)
  br label %265

56:                                               ; preds = %44
  %57 = load %struct.archive*, %struct.archive** %4, align 8
  %58 = load i64, i64* @ARCHIVE_OK, align 8
  %59 = load %struct.archive*, %struct.archive** %4, align 8
  %60 = call i32 @archive_write_set_format_7zip(%struct.archive* %59)
  %61 = call i32 @assertEqualIntA(%struct.archive* %57, i64 %58, i32 %60)
  %62 = load i8*, i8** %2, align 8
  %63 = icmp ne i8* %62, null
  br i1 %63, label %64, label %83

64:                                               ; preds = %56
  %65 = load i64, i64* @ARCHIVE_OK, align 8
  %66 = load %struct.archive*, %struct.archive** %4, align 8
  %67 = load i8*, i8** %2, align 8
  %68 = call i64 @archive_write_set_format_option(%struct.archive* %66, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i8* %67)
  %69 = icmp ne i64 %65, %68
  br i1 %69, label %70, label %83

70:                                               ; preds = %64
  %71 = load i8*, i8** %2, align 8
  %72 = call i32 @skipping(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.2, i64 0, i64 0), i8* %71)
  %73 = load i64, i64* @ARCHIVE_OK, align 8
  %74 = load %struct.archive*, %struct.archive** %4, align 8
  %75 = call i32 @archive_write_free(%struct.archive* %74)
  %76 = call i32 @assertEqualInt(i64 %73, i32 %75)
  %77 = load i8*, i8** %8, align 8
  %78 = call i32 @free(i8* %77)
  %79 = load i8*, i8** %9, align 8
  %80 = call i32 @free(i8* %79)
  %81 = load i8*, i8** %10, align 8
  %82 = call i32 @free(i8* %81)
  br label %265

83:                                               ; preds = %64, %56
  %84 = load %struct.archive*, %struct.archive** %4, align 8
  %85 = load i64, i64* @ARCHIVE_OK, align 8
  %86 = load %struct.archive*, %struct.archive** %4, align 8
  %87 = call i32 @archive_write_add_filter_none(%struct.archive* %86)
  %88 = call i32 @assertEqualIntA(%struct.archive* %84, i64 %85, i32 %87)
  %89 = load %struct.archive*, %struct.archive** %4, align 8
  %90 = load i64, i64* @ARCHIVE_OK, align 8
  %91 = load %struct.archive*, %struct.archive** %4, align 8
  %92 = load i8*, i8** %8, align 8
  %93 = load i64, i64* %6, align 8
  %94 = call i32 @archive_write_open_memory(%struct.archive* %91, i8* %92, i64 %93, i64* %5)
  %95 = call i32 @assertEqualIntA(%struct.archive* %89, i64 %90, i32 %94)
  %96 = call %struct.archive_entry* (...) @archive_entry_new()
  store %struct.archive_entry* %96, %struct.archive_entry** %3, align 8
  %97 = icmp ne %struct.archive_entry* %96, null
  %98 = zext i1 %97 to i32
  %99 = call i32 @assert(i32 %98)
  %100 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %101 = call i32 @archive_entry_set_mtime(%struct.archive_entry* %100, i32 1, i32 100)
  %102 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %103 = call i32 @archive_entry_mtime(%struct.archive_entry* %102)
  %104 = call i32 @assertEqualInt(i64 1, i32 %103)
  %105 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %106 = call i32 @archive_entry_mtime_nsec(%struct.archive_entry* %105)
  %107 = call i32 @assertEqualInt(i64 100, i32 %106)
  %108 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %109 = call i32 @archive_entry_copy_pathname(%struct.archive_entry* %108, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %110 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %111 = call i32 @archive_entry_pathname(%struct.archive_entry* %110)
  %112 = call i32 @assertEqualString(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0), i32 %111)
  %113 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %114 = load i32, i32* @AE_IFREG, align 4
  %115 = or i32 %114, 493
  %116 = call i32 @archive_entry_set_mode(%struct.archive_entry* %113, i32 %115)
  %117 = load i32, i32* @AE_IFREG, align 4
  %118 = or i32 %117, 493
  %119 = sext i32 %118 to i64
  %120 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %121 = call i32 @archive_entry_mode(%struct.archive_entry* %120)
  %122 = call i32 @assertEqualInt(i64 %119, i32 %121)
  %123 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %124 = load i64, i64* %7, align 8
  %125 = call i32 @archive_entry_set_size(%struct.archive_entry* %123, i64 %124)
  %126 = load %struct.archive*, %struct.archive** %4, align 8
  %127 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %128 = call i32 @archive_write_header(%struct.archive* %126, %struct.archive_entry* %127)
  %129 = call i32 @assertEqualInt(i64 0, i32 %128)
  %130 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %131 = call i32 @archive_entry_free(%struct.archive_entry* %130)
  %132 = load i8*, i8** %2, align 8
  %133 = call i64 @strcmp(i8* %132, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0))
  %134 = icmp eq i64 %133, 0
  br i1 %134, label %135, label %139

135:                                              ; preds = %83
  %136 = load i8*, i8** %9, align 8
  %137 = load i64, i64* %7, align 8
  %138 = call i32 @memset(i8* %136, i8 signext 97, i64 %137)
  br label %156

139:                                              ; preds = %83
  store i32 0, i32* %11, align 4
  br label %140

140:                                              ; preds = %152, %139
  %141 = load i32, i32* %11, align 4
  %142 = zext i32 %141 to i64
  %143 = load i64, i64* %7, align 8
  %144 = icmp ult i64 %142, %143
  br i1 %144, label %145, label %155

145:                                              ; preds = %140
  %146 = call i64 (...) @rand()
  %147 = trunc i64 %146 to i8
  %148 = load i8*, i8** %9, align 8
  %149 = load i32, i32* %11, align 4
  %150 = zext i32 %149 to i64
  %151 = getelementptr inbounds i8, i8* %148, i64 %150
  store i8 %147, i8* %151, align 1
  br label %152

152:                                              ; preds = %145
  %153 = load i32, i32* %11, align 4
  %154 = add i32 %153, 1
  store i32 %154, i32* %11, align 4
  br label %140

155:                                              ; preds = %140
  br label %156

156:                                              ; preds = %155, %135
  %157 = load i64, i64* %7, align 8
  %158 = load %struct.archive*, %struct.archive** %4, align 8
  %159 = load i8*, i8** %9, align 8
  %160 = load i64, i64* %7, align 8
  %161 = call i32 @archive_write_data(%struct.archive* %158, i8* %159, i64 %160)
  %162 = call i32 @assertEqualInt(i64 %157, i32 %161)
  %163 = load %struct.archive*, %struct.archive** %4, align 8
  %164 = load i64, i64* @ARCHIVE_OK, align 8
  %165 = load %struct.archive*, %struct.archive** %4, align 8
  %166 = call i32 @archive_write_close(%struct.archive* %165)
  %167 = call i32 @assertEqualIntA(%struct.archive* %163, i64 %164, i32 %166)
  %168 = load i64, i64* @ARCHIVE_OK, align 8
  %169 = load %struct.archive*, %struct.archive** %4, align 8
  %170 = call i32 @archive_write_free(%struct.archive* %169)
  %171 = call i32 @assertEqualInt(i64 %168, i32 %170)
  %172 = load i8*, i8** %8, align 8
  %173 = call i32 @assertEqualMem(i8* %172, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i64 0, i64 0), i64 8)
  %174 = call %struct.archive* (...) @archive_read_new()
  store %struct.archive* %174, %struct.archive** %4, align 8
  %175 = icmp ne %struct.archive* %174, null
  %176 = zext i1 %175 to i32
  %177 = call i32 @assert(i32 %176)
  %178 = load %struct.archive*, %struct.archive** %4, align 8
  %179 = load i64, i64* @ARCHIVE_OK, align 8
  %180 = load %struct.archive*, %struct.archive** %4, align 8
  %181 = call i32 @archive_read_support_format_all(%struct.archive* %180)
  %182 = call i32 @assertEqualIntA(%struct.archive* %178, i64 %179, i32 %181)
  %183 = load %struct.archive*, %struct.archive** %4, align 8
  %184 = load i64, i64* @ARCHIVE_OK, align 8
  %185 = load %struct.archive*, %struct.archive** %4, align 8
  %186 = call i32 @archive_read_support_filter_all(%struct.archive* %185)
  %187 = call i32 @assertEqualIntA(%struct.archive* %183, i64 %184, i32 %186)
  %188 = load %struct.archive*, %struct.archive** %4, align 8
  %189 = load i64, i64* @ARCHIVE_OK, align 8
  %190 = load %struct.archive*, %struct.archive** %4, align 8
  %191 = load i8*, i8** %8, align 8
  %192 = load i64, i64* %5, align 8
  %193 = call i32 @read_open_memory_seek(%struct.archive* %190, i8* %191, i64 %192, i32 7)
  %194 = call i32 @assertEqualIntA(%struct.archive* %188, i64 %189, i32 %193)
  %195 = load %struct.archive*, %struct.archive** %4, align 8
  %196 = load i64, i64* @ARCHIVE_OK, align 8
  %197 = load %struct.archive*, %struct.archive** %4, align 8
  %198 = call i32 @archive_read_next_header(%struct.archive* %197, %struct.archive_entry** %3)
  %199 = call i32 @assertEqualIntA(%struct.archive* %195, i64 %196, i32 %198)
  %200 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %201 = call i32 @archive_entry_mtime(%struct.archive_entry* %200)
  %202 = call i32 @assertEqualInt(i64 1, i32 %201)
  %203 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %204 = call i32 @archive_entry_mtime_nsec(%struct.archive_entry* %203)
  %205 = call i32 @assertEqualInt(i64 100, i32 %204)
  %206 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %207 = call i32 @archive_entry_atime(%struct.archive_entry* %206)
  %208 = call i32 @assertEqualInt(i64 0, i32 %207)
  %209 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %210 = call i32 @archive_entry_ctime(%struct.archive_entry* %209)
  %211 = call i32 @assertEqualInt(i64 0, i32 %210)
  %212 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %213 = call i32 @archive_entry_pathname(%struct.archive_entry* %212)
  %214 = call i32 @assertEqualString(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0), i32 %213)
  %215 = load i32, i32* @AE_IFREG, align 4
  %216 = or i32 %215, 493
  %217 = sext i32 %216 to i64
  %218 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %219 = call i32 @archive_entry_mode(%struct.archive_entry* %218)
  %220 = call i32 @assertEqualInt(i64 %217, i32 %219)
  %221 = load i64, i64* %7, align 8
  %222 = load %struct.archive_entry*, %struct.archive_entry** %3, align 8
  %223 = call i32 @archive_entry_size(%struct.archive_entry* %222)
  %224 = call i32 @assertEqualInt(i64 %221, i32 %223)
  %225 = load %struct.archive*, %struct.archive** %4, align 8
  %226 = load i64, i64* %7, align 8
  %227 = load %struct.archive*, %struct.archive** %4, align 8
  %228 = load i8*, i8** %10, align 8
  %229 = load i64, i64* %7, align 8
  %230 = call i32 @archive_read_data(%struct.archive* %227, i8* %228, i64 %229)
  %231 = call i32 @assertEqualIntA(%struct.archive* %225, i64 %226, i32 %230)
  %232 = load i8*, i8** %9, align 8
  %233 = load i8*, i8** %10, align 8
  %234 = load i64, i64* %7, align 8
  %235 = call i32 @assertEqualMem(i8* %232, i8* %233, i64 %234)
  %236 = load %struct.archive*, %struct.archive** %4, align 8
  %237 = load i64, i64* @ARCHIVE_EOF, align 8
  %238 = load %struct.archive*, %struct.archive** %4, align 8
  %239 = call i32 @archive_read_next_header(%struct.archive* %238, %struct.archive_entry** %3)
  %240 = call i32 @assertEqualIntA(%struct.archive* %236, i64 %237, i32 %239)
  %241 = load %struct.archive*, %struct.archive** %4, align 8
  %242 = load i64, i64* @ARCHIVE_FILTER_NONE, align 8
  %243 = load %struct.archive*, %struct.archive** %4, align 8
  %244 = call i32 @archive_filter_code(%struct.archive* %243, i32 0)
  %245 = call i32 @assertEqualIntA(%struct.archive* %241, i64 %242, i32 %244)
  %246 = load %struct.archive*, %struct.archive** %4, align 8
  %247 = load i64, i64* @ARCHIVE_FORMAT_7ZIP, align 8
  %248 = load %struct.archive*, %struct.archive** %4, align 8
  %249 = call i32 @archive_format(%struct.archive* %248)
  %250 = call i32 @assertEqualIntA(%struct.archive* %246, i64 %247, i32 %249)
  %251 = load i64, i64* @ARCHIVE_OK, align 8
  %252 = load %struct.archive*, %struct.archive** %4, align 8
  %253 = call i32 @archive_read_close(%struct.archive* %252)
  %254 = call i32 @assertEqualInt(i64 %251, i32 %253)
  %255 = load i64, i64* @ARCHIVE_OK, align 8
  %256 = load %struct.archive*, %struct.archive** %4, align 8
  %257 = call i32 @archive_read_free(%struct.archive* %256)
  %258 = call i32 @assertEqualInt(i64 %255, i32 %257)
  %259 = load i8*, i8** %8, align 8
  %260 = call i32 @free(i8* %259)
  %261 = load i8*, i8** %9, align 8
  %262 = call i32 @free(i8* %261)
  %263 = load i8*, i8** %10, align 8
  %264 = call i32 @free(i8* %263)
  br label %265

265:                                              ; preds = %156, %70, %47
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i8* @malloc(i64) #1

declare dso_local %struct.archive* @archive_write_new(...) #1

declare dso_local i32 @archive_write_free(%struct.archive*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @assertEqualIntA(%struct.archive*, i64, i32) #1

declare dso_local i32 @archive_write_set_format_7zip(%struct.archive*) #1

declare dso_local i64 @archive_write_set_format_option(%struct.archive*, i8*, i8*, i8*) #1

declare dso_local i32 @skipping(i8*, i8*) #1

declare dso_local i32 @assertEqualInt(i64, i32) #1

declare dso_local i32 @archive_write_add_filter_none(%struct.archive*) #1

declare dso_local i32 @archive_write_open_memory(%struct.archive*, i8*, i64, i64*) #1

declare dso_local %struct.archive_entry* @archive_entry_new(...) #1

declare dso_local i32 @archive_entry_set_mtime(%struct.archive_entry*, i32, i32) #1

declare dso_local i32 @archive_entry_mtime(%struct.archive_entry*) #1

declare dso_local i32 @archive_entry_mtime_nsec(%struct.archive_entry*) #1

declare dso_local i32 @archive_entry_copy_pathname(%struct.archive_entry*, i8*) #1

declare dso_local i32 @assertEqualString(i8*, i32) #1

declare dso_local i32 @archive_entry_pathname(%struct.archive_entry*) #1

declare dso_local i32 @archive_entry_set_mode(%struct.archive_entry*, i32) #1

declare dso_local i32 @archive_entry_mode(%struct.archive_entry*) #1

declare dso_local i32 @archive_entry_set_size(%struct.archive_entry*, i64) #1

declare dso_local i32 @archive_write_header(%struct.archive*, %struct.archive_entry*) #1

declare dso_local i32 @archive_entry_free(%struct.archive_entry*) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @memset(i8*, i8 signext, i64) #1

declare dso_local i64 @rand(...) #1

declare dso_local i32 @archive_write_data(%struct.archive*, i8*, i64) #1

declare dso_local i32 @archive_write_close(%struct.archive*) #1

declare dso_local i32 @assertEqualMem(i8*, i8*, i64) #1

declare dso_local %struct.archive* @archive_read_new(...) #1

declare dso_local i32 @archive_read_support_format_all(%struct.archive*) #1

declare dso_local i32 @archive_read_support_filter_all(%struct.archive*) #1

declare dso_local i32 @read_open_memory_seek(%struct.archive*, i8*, i64, i32) #1

declare dso_local i32 @archive_read_next_header(%struct.archive*, %struct.archive_entry**) #1

declare dso_local i32 @archive_entry_atime(%struct.archive_entry*) #1

declare dso_local i32 @archive_entry_ctime(%struct.archive_entry*) #1

declare dso_local i32 @archive_entry_size(%struct.archive_entry*) #1

declare dso_local i32 @archive_read_data(%struct.archive*, i8*, i64) #1

declare dso_local i32 @archive_filter_code(%struct.archive*, i32) #1

declare dso_local i32 @archive_format(%struct.archive*) #1

declare dso_local i32 @archive_read_close(%struct.archive*) #1

declare dso_local i32 @archive_read_free(%struct.archive*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
